test/sema/struct_member_multiple_initialization.dmz
// RUN: (dmz %s -res-dump 2>&1 || true) | filecheck %s
struct S {
    x: i32,
}

fn main() -> void {
    // CHECK: [[# @LINE + 4 ]]:9: error: field 'x' is already initialized
    // CHECK: [[# @LINE + 4 ]]:9: error: field 'x' is already initialized
    let x = S{
        x: 0,
        x: 1,
        x: 2,
    };
}